@@ -1,5 +1,10 @@
 2005-03-03  Daniel Macks  <dmacks@netspace.org>
 
+	* postinstall.pl.in: Automatic compatibility for when enhanced
+	choose_mirrors is released.
+
+2005-03-03  Daniel Macks  <dmacks@netspace.org>
+
 	* postinstall.pl.in: Prepare for enhanced choose_mirrors functionality
 
 2005-03-02  Dave Morrison  <dmrrsn@users.sourceforge.net>
